--- a/app/globals.scss
+++ b/app/globals.scss
@@ -23,6 +23,8 @@
 
 // 8. Add additional custom code here
 
+@import url("https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0,0");
+
 body {
   margin: 0;
   min-height: 100vh;
