--- a/app/globals.scss
+++ b/app/globals.scss
@@ -5,3 +5,19 @@ body {
   margin: 0;
   min-height: 100vh;
 }
+
+.checkout-input {
+  width: 4ex;
+  text-align: center;
+  -moz-appearance: textfield;
+
+  &::-webkit-outer-spin-button,
+  &::-webkit-inner-spin-button {
+    -webkit-appearance: none;
+    margin: 0;
+  }
+
+  &:focus {
+    outline: none;
+  }
+}
