--- a/app/globals.scss
+++ b/app/globals.scss
@@ -1,6 +1,10 @@
 @import url("https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0,0");
 @import "@/node_modules/bootstrap/dist/css/bootstrap.css";
 
+:root {
+  --bs-body-font-family: var(--font-inter), var(--font-noto-sans-tc), sans-serif !important;
+}
+
 body {
   margin: 0;
   min-height: 100vh;
